--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "floralux",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./src/server.js",
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js"
+    "start": "nodemon ./src/server.js"
   },
   "repository": {
     "type": "git",
