--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ APP_NAME="floralux"
 PORT=100
 API_URL="http://localhost:100/"
 API_KEY="qhuqgg"
+DB_URI = "mongodb+srv://idriss:<password>@cluster0.koh36.mongodb.net/?retryWrites=true&w=majority"
