--- a/package.json
+++ b/package.json
@@ -30,8 +30,11 @@
     "express-graphql": "^0.12.0",
     "graphql": "^16.5.0",
     "jsonwebtoken": "^8.5.1",
+    "mongodb": "^4.7.0",
     "mysql": "^2.18.1",
+    "mysql2": "^2.3.3",
     "nodemon": "^2.0.18",
+    "sequelize": "^6.21.2",
     "sharp": "^0.30.7"
   }
 }
