--- a/.env
+++ b/.env
@@ -3,3 +3,9 @@ PORT=100
 API_URL="http://localhost:100/"
 API_KEY="qhuqgg"
 DB_URI = "mongodb+srv://idriss:<password>@cluster0.koh36.mongodb.net/?retryWrites=true&w=majority"
+
+DB_HOST="localhost"
+DB_USER="root"
+DB_PASS=""
+DB_NAME=""
+DB_DIALECT="mysql"
